get tenant job right

--- a/src/main/resources/openapi/tenant-2.0.yaml
+++ b/src/main/resources/openapi/tenant-2.0.yaml
@@ -34,6 +34,13 @@ paths:
     get:
       description: Get tenant job
       operationId: getTenantJob
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: job identifier
+          schema:
+            type: string
       responses:
         "200":
           description: job returned OK
