--- a/src/main/resources/openapi/tenant-2.0.yaml
+++ b/src/main/resources/openapi/tenant-2.0.yaml
@@ -41,6 +41,15 @@ paths:
     get:
       description: Get tenant job
       operationId: getTenantJob
+      parameters:
+        - in: query
+          name: wait
+          required: false
+          description: wait until job change, but no longer than the wait
+            time - in milliseconds. 0 means "no wait" and is behavior if
+            omitted.
+          schema:
+            type: integer
       responses:
         "200":
           description: job returned OK
