--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
                     <Main-Class>io.vertx.core.Launcher</Main-Class>
-                    <Main-Verticle>org.folio.eusage.reports.MainVerticle</Main-Verticle>
+                    <Main-Verticle>org.folio.tenant.rest.impl.HttpServerVerticle</Main-Verticle>
                     <Multi-Release>true</Multi-Release>
                   </manifestEntries>
                 </transformer>
@@ -284,6 +284,39 @@
               <generatorName>java-vertx-web</generatorName>
               <modelPackage>${project.groupId}.tenant.main</modelPackage>
               <apiPackage>${project.groupId}.tenant.rest.resource</apiPackage>
+              <generateApis>true</generateApis>
+              <generateApiTests>true</generateApiTests>
+              <generateApiDocumentation>true</generateApiDocumentation>
+              <generateModels>true</generateModels>
+              <modelsToGenerate>error,errors,metadata,parameter,parameters,tenantAttributes,tenantJob</modelsToGenerate>
+              <generateModelTests>false</generateModelTests>
+              <generateModelDocumentation>true</generateModelDocumentation>
+              <configOptions>
+                <java8>true</java8>
+                <dateLibrary>java8</dateLibrary>
+                <interfaceOnly>true</interfaceOnly>
+              </configOptions>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>${openapi-generator.version}</version>
+        <executions>
+          <execution>
+            <id>eUsage</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <inputSpec>src/main/resources/openapi/eusage-reports-1.0.yaml</inputSpec>
+              <output>${project.build.directory}/generated-sources</output>
+              <generatorName>java-vertx-web</generatorName>
+              <modelPackage>${project.groupId}.eusage.main</modelPackage>
+              <apiPackage>${project.groupId}.eusage.rest.resource</apiPackage>
               <generateApis>true</generateApis>
               <generateApiTests>true</generateApiTests>
               <generateApiDocumentation>true</generateApiDocumentation>
