--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
                     <Main-Class>io.vertx.core.Launcher</Main-Class>
-                    <Main-Verticle>org.folio.tenant.rest.impl.HttpServerVerticle</Main-Verticle>
+                    <Main-Verticle>org.folio.eusage.reports.MainVerticle</Main-Verticle>
                     <Multi-Release>true</Multi-Release>
                   </manifestEntries>
                 </transformer>
