--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -27,6 +27,24 @@ paths:
                 type: string
         "500":
           $ref: "#/components/responses/trait_500"
+  /eusage-reports/report-titles:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+    get:
+      description: Get titles with links to KB and COUNTER reports.
+      operationId: getReportTitles
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: schemas/reportTitles.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "500":
+          $ref: "#/components/responses/trait_500"
 components:
   responses:
     trait_400:
@@ -50,4 +68,3 @@ components:
   schemas:
     errors:
       $ref: schemas/errors.json
-
