--- a/src/main/resources/openapi/tenant-2.0.yaml
+++ b/src/main/resources/openapi/tenant-2.0.yaml
@@ -7,6 +7,7 @@ paths:
     parameters:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
     post:
       description: Start tenant operation
       operationId: postTenant
@@ -37,6 +38,7 @@ paths:
     parameters:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
       - in: path
         name: id
         required: true
