--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-stack-depchain</artifactId>
-        <version>4.1.0.CR1</version>
+        <version>4.1.0</version>
         <type>pom</type>
         <scope>import</scope>
         </dependency>
