limit, offset handling

--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -20,6 +20,18 @@ paths:
         description: limit titles associated with usage provider (UUID)
         schema:
           type: string
+      - in: query
+        name: offset
+        required: false
+        description: Skip over number of elements (0 is first item)
+        schema:
+          type: integer
+      - in: query
+        name: limit
+        required: false
+        description: Limit the number of elements returned in the response
+        schema:
+          type: integer
     get:
       description: Get titles with links to KB
       operationId: getReportTitles
@@ -54,6 +66,18 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - in: query
+        name: offset
+        required: false
+        description: Skip over number of elements (0 is first item)
+        schema:
+          type: integer
+      - in: query
+        name: limit
+        required: false
+        description: Limit the number of elements returned in the response
+        schema:
+          type: integer
     post:
       description: Parse counter reports
       operationId: postFromCounter
@@ -80,6 +104,18 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - in: query
+        name: offset
+        required: false
+        description: Skip over number of elements (0 is first item)
+        schema:
+          type: integer
+      - in: query
+        name: limit
+        required: false
+        description: Limit the number of elements returned in the response
+        schema:
+          type: integer
     get:
       description: Get title data
       operationId: getTitleData
@@ -99,6 +135,18 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - in: query
+        name: offset
+        required: false
+        description: Skip over number of elements (0 is first item)
+        schema:
+          type: integer
+      - in: query
+        name: limit
+        required: false
+        description: Limit the number of elements returned in the response
+        schema:
+          type: integer
     get:
       description: Return report data
       operationId: getReportData
