--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -147,6 +147,116 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
+  /eusage-reports/stored-reports/use-over-time:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/offset.yaml
+      - $ref: parameters/limit.yaml
+      - $ref: parameters/agreement-id.yaml
+      - $ref: parameters/start-date.yaml
+      - $ref: parameters/end-date.yaml
+      - $ref: parameters/format.yaml
+      - $ref: parameters/include-oa.yaml
+    get:
+      description: Return usage data over time, where usage data range falls within startDate, endDate
+      operationId: getUseOverTime
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: schemas/reportDataEntries.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /eusage-reports/stored-reports/reqs-by-date-of-use:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/offset.yaml
+      - $ref: parameters/limit.yaml
+      - $ref: parameters/agreement-id.yaml
+      - $ref: parameters/start-date.yaml
+      - $ref: parameters/end-date.yaml
+      - $ref: parameters/include-oa.yaml
+    get:
+      description: Return usage data for usage that falls within startDate and endDate
+      operationId: getReqsByDateOfUse
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: schemas/reportDataEntries.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /eusage-reports/stored-reports/reqs-by-pub-year:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/offset.yaml
+      - $ref: parameters/limit.yaml
+      - $ref: parameters/agreement-id.yaml
+      - $ref: parameters/start-date.yaml
+      - $ref: parameters/end-date.yaml
+      - $ref: parameters/include-oa.yaml
+      - $ref: parameters/period-of-use.yaml
+    get:
+      description: Return usage data for usage where usageMonth/usageYear fails into startDate, endDate
+      operationId: getReqsByPubYear
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: schemas/reportDataEntries.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /eusage-reports/stored-reports/cost-per-use:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/offset.yaml
+      - $ref: parameters/limit.yaml
+      - $ref: parameters/agreement-id.yaml
+      - $ref: parameters/start-date.yaml
+      - $ref: parameters/end-date.yaml
+      - $ref: parameters/include-oa.yaml
+    get:
+      description: Return usage data for usage where usageMonth/usageYear fails into startDate, endDate
+      operationId: getCostPerUse
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: schemas/reportDataEntries.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
 components:
   responses:
     trait_400:
