Improve error handling; uuid format

--- a/src/main/resources/openapi/tenant-2.0.yaml
+++ b/src/main/resources/openapi/tenant-2.0.yaml
@@ -45,6 +45,7 @@ paths:
         description: job identifier
         schema:
           type: string
+          format: uuid
     get:
       description: Get tenant job
       operationId: getTenantJob
