Revert "Replace reportDataEntries.json by report.json"
This reverts commit 392856a31cedc3549d0d5aa6a7ecc1fcbdc257e2.

--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -195,7 +195,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: schemas/report.json
+                $ref: schemas/reportDataEntries.json
         "400":
           $ref: "#/components/responses/trait_400"
         "404":
@@ -224,7 +224,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: schemas/report.json
+                $ref: schemas/reportDataEntries.json
         "400":
           $ref: "#/components/responses/trait_400"
         "404":
@@ -251,7 +251,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: schemas/report.json
+                $ref: schemas/reportDataEntries.json
         "400":
           $ref: "#/components/responses/trait_400"
         "404":
