--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -52,6 +52,28 @@ paths:
           $ref: "#/components/responses/trait_400"
         "500":
           $ref: "#/components/responses/trait_500"
+  /eusage-reports/report-packages:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/offset.yaml
+      - $ref: parameters/limit.yaml
+      - $ref: parameters/query.yaml
+    get:
+      description: Get KB packages
+      operationId: getReportPackages
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: schemas/reportPackages.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "500":
+          $ref: "#/components/responses/trait_500"
   /eusage-reports/report-titles/from-counter:
     parameters:
       - $ref: headers/okapi-tenant.yaml
