--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -176,6 +176,32 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
+  /eusage-reports/stored-reports/use-over-time/csv:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/agreement-id.yaml
+      - $ref: parameters/start-date.yaml
+      - $ref: parameters/end-date.yaml
+      - $ref: parameters/format.yaml
+      - $ref: parameters/include-oa.yaml
+    get:
+      description: Return usage data over time, where usageDateRange falls within startDate, endDate
+      operationId: getUseOverTimeCsv
+      responses:
+        "200":
+          description: OK
+          content:
+            text/csv:
+              schema:
+                type: string
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
   /eusage-reports/stored-reports/reqs-by-date-of-use:
     parameters:
       - $ref: headers/okapi-tenant.yaml
@@ -195,6 +221,31 @@ paths:
             application/json:
               schema:
                 $ref: schemas/report.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /eusage-reports/stored-reports/reqs-by-date-of-use/csv:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/agreement-id.yaml
+      - $ref: parameters/start-date.yaml
+      - $ref: parameters/end-date.yaml
+      - $ref: parameters/include-oa.yaml
+    get:
+      description: Return requests by date of use; this is like use over time but additionally groups by publication year.
+      operationId: getReqsByDateOfUseCsv
+      responses:
+        "200":
+          description: OK
+          content:
+            text/csv:
+              schema:
+                type: string
         "400":
           $ref: "#/components/responses/trait_400"
         "404":
@@ -224,6 +275,35 @@ paths:
             application/json:
               schema:
                 $ref: schemas/report.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /eusage-reports/stored-reports/reqs-by-pub-year/csv:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/agreement-id.yaml
+      - $ref: parameters/start-date.yaml
+      - $ref: parameters/end-date.yaml
+      - $ref: parameters/include-oa.yaml
+      - $ref: parameters/period-of-use.yaml
+    get:
+      description: Return requests by publication year where usageDateRange falls within startDate, endDate.
+        Grouping controlled by periodOfUse.
+        "accessCountPeriods" array lists the publication years to be used as column labels for numbers in the
+        "totalItemRequestsByPeriod", "uniqueItemRequestsByPeriod" and "accessCountsByPeriod" arrays.
+      operationId: getReqsByPubYearCsv
+      responses:
+        "200":
+          description: OK
+          content:
+            text/csv:
+              schema:
+                type: string
         "400":
           $ref: "#/components/responses/trait_400"
         "404":
