--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -235,8 +235,6 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
-      - $ref: parameters/offset.yaml
-      - $ref: parameters/limit.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
@@ -250,7 +248,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: schemas/report.json
+                $ref: schemas/reportCost.json
         "400":
           $ref: "#/components/responses/trait_400"
         "404":
