--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -335,6 +335,31 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
+  /eusage-reports/stored-reports/cost-per-use/csv:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - $ref: parameters/agreement-id.yaml
+      - $ref: parameters/start-date.yaml
+      - $ref: parameters/end-date.yaml
+      - $ref: parameters/include-oa.yaml
+    get:
+      description: Return cost per where usageDateRange falls within startDate, endDate.
+      operationId: getCostPerUseCsv
+      responses:
+        "200":
+          description: OK
+          content:
+            text/csv:
+              schema:
+                type: string
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
 components:
   responses:
     trait_400:
