--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -153,6 +153,7 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
@@ -181,6 +182,7 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
@@ -207,6 +209,7 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
@@ -232,6 +235,7 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
@@ -257,6 +261,7 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
@@ -286,6 +291,7 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
@@ -315,6 +321,7 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
@@ -350,6 +357,7 @@ paths:
       - $ref: headers/okapi-tenant.yaml
       - $ref: headers/okapi-token.yaml
       - $ref: headers/okapi-url.yaml
+      - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
