full parameter MODEUR-54
Support full parameter for the 4 reports to control whether full or
brief(summary) response should be returned.

--- a/src/main/resources/openapi/eusage-reports-1.0.yaml
+++ b/src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -178,6 +178,7 @@ paths:
       - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/csv.yaml
+      - $ref: parameters/full.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
       - $ref: parameters/format.yaml
@@ -208,6 +209,7 @@ paths:
       - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/csv.yaml
+      - $ref: parameters/full.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
       - $ref: parameters/format.yaml
@@ -237,6 +239,7 @@ paths:
       - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/csv.yaml
+      - $ref: parameters/full.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
       - $ref: parameters/format.yaml
@@ -269,6 +272,7 @@ paths:
       - $ref: parameters/access-count-period.yaml
       - $ref: parameters/agreement-id.yaml
       - $ref: parameters/csv.yaml
+      - $ref: parameters/full.yaml
       - $ref: parameters/start-date.yaml
       - $ref: parameters/end-date.yaml
       - $ref: parameters/format.yaml
