--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
         <version>4.8.2</version>
       </dependency>
       <dependency>
-        <groupId>org.z3950.zing</groupId>
-        <artifactId>cql-java</artifactId>
-        <version>1.13</version>
+        <groupId>org.folio</groupId>
+        <artifactId>vertx-lib</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -131,6 +131,10 @@
     <dependency>
       <groupId>org.folio.okapi</groupId>
       <artifactId>okapi-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>vertx-lib</artifactId>
     </dependency>
     <dependency>
       <groupId>io.netty</groupId>
