--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
         <version>1.0.0-SNAPSHOT</version>
       </dependency>
       <dependency>
+        <groupId>org.folio</groupId>
+        <artifactId>vertx-lib-pg-testing</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-csv</artifactId>
         <version>1.9.0</version>
@@ -156,6 +161,11 @@
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>vertx-lib-pg-testing</artifactId>
       <scope>test</scope>
     </dependency>
     <!-- logging see http://www.slf4j.org/legacy.html -->
