--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-stack-depchain</artifactId>
-        <version>4.3.4</version>
+        <version>4.3.7</version> <!-- 4.3.8 changes JsonParser behavior -->
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -53,22 +53,22 @@
       <dependency>
         <groupId>org.folio.okapi</groupId>
         <artifactId>okapi-common</artifactId>
-        <version>4.14.5</version>
+        <version>4.14.10</version>
       </dependency>
       <dependency>
         <groupId>org.folio.okapi</groupId>
         <artifactId>okapi-testing</artifactId>
-        <version>4.14.5</version>
+        <version>4.14.10</version>
       </dependency>
       <dependency>
         <groupId>org.folio</groupId>
         <artifactId>vertx-lib</artifactId>
-        <version>2.0.1</version>
+        <version>3.0.0</version>
       </dependency>
       <dependency>
         <groupId>org.folio</groupId>
         <artifactId>vertx-lib-pg-testing</artifactId>
-        <version>2.0.1</version>
+        <version>3.0.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
