--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <okapi.version>5.0.0</okapi.version>
+    <vertxlib.version>3.0.0</vertxlib.version>
   </properties>
 
   <dependencyManagement>
@@ -39,7 +41,9 @@
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-stack-depchain</artifactId>
-        <version>4.3.7</version> <!-- 4.3.8 changes JsonParser behavior -->
+        <!-- Vert.x 4.3.8 changes JsonParser behavior. -->
+        <!-- https://github.com/eclipse-vertx/vert.x/issues/4610 -->
+        <version>4.3.7</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -53,22 +57,22 @@
       <dependency>
         <groupId>org.folio.okapi</groupId>
         <artifactId>okapi-common</artifactId>
-        <version>4.14.10</version>
+        <version>${okapi.version}</version>
       </dependency>
       <dependency>
         <groupId>org.folio.okapi</groupId>
         <artifactId>okapi-testing</artifactId>
-        <version>4.14.10</version>
+        <version>${okapi.version}</version>
       </dependency>
       <dependency>
         <groupId>org.folio</groupId>
         <artifactId>vertx-lib</artifactId>
-        <version>3.0.0</version>
+        <version>${vertxlib.version}</version>
       </dependency>
       <dependency>
         <groupId>org.folio</groupId>
         <artifactId>vertx-lib-pg-testing</artifactId>
-        <version>3.0.0</version>
+        <version>${vertxlib.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -78,7 +82,7 @@
       <dependency>
         <groupId>io.rest-assured</groupId>
         <artifactId>rest-assured</artifactId>
-        <version>5.2.0</version>
+        <version>5.3.0</version>
       </dependency>
       <dependency>
         <groupId>org.testcontainers</groupId>
